fix: Remove backdrop filter from navbar which was causing visibility of sidebar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -40,7 +40,6 @@
 
 .navbar {
   border-bottom: 1px solid var(--ifm-color-emphasis-200);
-  backdrop-filter: blur(8px);
   background: rgba(var(--ifm-background-color-rgb, 255, 255, 255), 0.9);
 }
 
